--- a/src/_footer.scss
+++ b/src/_footer.scss
@@ -5,7 +5,7 @@ footer {
     display: flex;
     // flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     height: 100%;
     
     padding: 6rem 9rem;
@@ -14,6 +14,8 @@ footer {
     @include respond(tab-port) {
         flex-direction: column;
         height: 66vh;
+        align-items: center;
+        text-align: center;
     }
 
     @include respond(phone) {
@@ -57,6 +59,12 @@ footer {
         li {
             margin-bottom: 1.3rem;
             list-style-type: none;
+            
+            @include respond(phone) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
 
                 a {
                     text-decoration: none;
@@ -66,6 +74,10 @@ footer {
                     color: $color-offwhite;
                     text-transform: uppercase;
                     letter-spacing: .2rem;
+
+                    @include respond(phone) {
+                        text-align: center;
+                    }
 
                     &:hover {
                         transition: .2s ease-in-out;
